/*
 *  glmesh is a mesh data render library base on QOpengl.
 *  glmesh provides object-oriented interfaces to the OpenGL API (3.0 and higher).
 *  It reduces the amount of OpenGL code required for rendering and facilitates
 *  coherent OpenGL.
 *
 *  File: gl_triangle_mesh.h
 *  Copyright (c) 2024-2026 scofieldzhu
 *
 *  MIT License
 *
 *  Permission is hereby granted, free of charge, to any person obtaining a copy
 *  of this software and associated documentation files (the "Software"), to deal
 *  in the Software without restriction, including without limitation the rights
 *  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 *  copies of the Software, and to permit persons to whom the Software is
 *  furnished to do so, subject to the following conditions:
 *
 *  The above copyright notice and this permission notice shall be included in all
 *  copies or substantial portions of the Software.
 *
 *  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 *  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 *  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 *  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 *  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 *  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 *  SOFTWARE.
 */
#ifndef __gl_triangle_mesh_h__
#define __gl_triangle_mesh_h__

#include "glmesh/kernel/gl/vertex_array.h"
#include "glmesh/kernel/gl/vertex_buffer.h"
#include "glmesh/kernel/gl/index_buffer.h"
#include "glmesh/kernel/gl/gl_drawable.h"

GLMESH_NAMESPACE_BEGIN

template<typename V> struct GpuTriangleMesh;

class GLMESH_KERNEL_API GLTriangleMesh : public GLDrawable
{
public:
    void draw() const override;
    template<typename V>
    void upload(const GpuTriangleMesh<V>& triangle_mesh, uint32 usage);
    bool valid() const { return index_count_ > 0; }

private:
    VertexArray vao_;
    VertexBuffer vbo_;
    IndexBuffer ebo_;
    std::size_t index_count_ = 0;
};

template<typename V>
void GLTriangleMesh::upload(const GpuTriangleMesh<V>& triangle_mesh, uint32 usage)
{
    index_count_ = triangle_mesh.indices.size();
    vao_.bind();
    vbo_.upload(triangle_mesh.vertices.data(), triangle_mesh.vertices.size() * sizeof(V), usage);
    ebo_.upload(triangle_mesh.indices.data(), triangle_mesh.indices.size() * sizeof(uint32), usage);
    V::SetupAttribs();
    vao_.unbind();
}

GLMESH_NAMESPACE_END

#endif